--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -19,7 +19,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">
+                                <a class="nav-link" href="{{ path('admin_guest_index') }}">
                                     Invités
                                 </a>
                             </li>
@@ -28,6 +28,17 @@
                 </div>
             </nav>
             <main class="col-md-9 ms-sm-auto col-lg-10 p-4">
+                <div class="container mt-3">
+                    {% for label, messages in app.flashes %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Fermer"></button>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                </div>
+                
                 {% block admin %}{% endblock %}
             </main>
         </div>
