--- a/templates/admin/media/add.html.twig
+++ b/templates/admin/media/add.html.twig
@@ -6,8 +6,9 @@
         <a href="{{ path('admin_media_index') }}" class="btn btn-primary">Retour</a>
     </div>
     {{ form_start(form) }}
-        {{ form_row(form.user) }}
+        {{ form_row(form.title) }}
         {% if is_granted('ROLE_ADMIN') %}
+            {{ form_row(form.user) }}
             {{ form_row(form.album) }}
             {{ form_row(form.title) }}
         {% endif %}
