--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -24,6 +24,11 @@
                                 </a>
                             </li>
                         {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('home') }}">
+                                Retour à l'accueil
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </nav>
