--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -27,7 +27,18 @@
                             <a class="nav-link" href="{{ path('about') }}">Qui suis-je ?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('login') }}">Connexion</a>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a class="nav-link" href="{{ path('admin_media_index') }}">Admin</a>
+                            {% elseif is_granted('ROLE_USER') %}
+                                <a class="nav-link" href="{{ path('admin_media_index') }}">Mes médias</a>
+                            {% endif %}
+                        </li>
+                        <li class="nav-item">
+                            {% if app.user %}
+                                <a class="nav-link" href="{{ path('logout') }}">Se déconnecter</a>
+                            {% else %}
+                                <a class="nav-link" href="{{ path('login') }}">Connexion</a>
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
